@@ -1,6 +1,7 @@
 2008-01-24  Martin Kutschker  <masi@typo3.org>
 
 	* #Added feature #10092: logging API for deprecated functions
+	* #Added feature #10100: logging API for deprecated TypoScript objects and properties
 
 2009-01-23  Steffen Kamper  <info@sk-typo3.de>
 
